Add skinwalker content to homebrew

--- a/games/pathfinder/homebrew.html
+++ b/games/pathfinder/homebrew.html
@@ -401,7 +401,7 @@
                 <div class="information-item">
                     <div class="information-title">The Kobold</div>
                     <div class="information-content">
-                        The kobold has very weak ability scores, so we've decided to change them.
+                        Kobolds have very poor ability scores, so we've decided to change them.
                         <div class="pf-race">
                             <table>
                                 <tr>
@@ -417,7 +417,287 @@
                 <div class="information-item">
                     <div class="information-title">The Skinwalker</div>
                     <div class="information-content">
-                        Insert content
+                        For the Skinwalker we've added five new subraces and more Favoured class bonusses.<br>
+                        <br>
+                        <div class="information-subtitle">Weremantis-kin (Deathclaw)</div>
+                        Like their progenitors Deathclaws are often loners, in their humanoid form they have telltale
+                        features being often tall and long limbed and their eyes being a brilliant green which seem to
+                        be slightly to large for their faces. These skinwalkers are wanderers often explained away as a
+                        form of spirituality or piety and can be found across Golarion.
+                        <div class="pf-race">
+                            <table>
+                                <tr>
+                                    <th>Ability scores</th>
+                                    <td>+2 Wisdom, -2 Inteligence<br>(+2 Constitution while shapechanged)</td>
+                                </tr>
+                                <tr>
+                                    <th>Alternate skill modifiers</th>
+                                    <td>Perception<br>Stealth</td>
+                                </tr>
+                                <tr>
+                                    <th>Alternate Spell-like ability</th>
+                                    <td>Heightened Awareness 1/day</td>
+                                </tr>
+                            </table>
+                            <div class="information-subsubtitle">Bestial features</div>
+                            <table>
+                                <tr>
+                                    <th>Claw Attack</th>
+                                    <td>Deathclaws have two claw attacks that each deal 1d4 points of damage.</td>
+                                </tr>
+                                <tr>
+                                    <th>Climb Speed</th>
+                                    <td>Deathclaws have a climb speed of 20 feet.</td>
+                                </tr>
+                                <tr>
+                                    <th>Agile Jumper</th>
+                                    <td>Deathclaws can jump without a running start</td>
+                                </tr>
+                                <tr>
+                                    <th>Cushioned Fall</th>
+                                    <td>Deathclaws treat falling damage as if the distance fallen were 20 feet less than
+                                        it
+                                        actually is</td>
+                                </tr>
+                            </table>
+                        </div>
+                        <br>
+                        <div class="information-subtitle">Werespider-kin (Webborn)</div>
+                        Webborn are often found in urban area's, they enjoy the large company of kin, having large
+                        families and forming even larger networks. They thrive in a community, and when alone they
+                        prefer to scurry away and come back in force. Webborn have dark or brown hair, large dark eyes,
+                        their fingers have a constant twitch to them and their faces are often shiny with a natural oil.
+                        <div class="pf-race">
+                            <table>
+                                <tr>
+                                    <th>Ability scores</th>
+                                    <td>+2 Constitution, -2 Charisma<br>(+2 Dexterity while shapechanged)</td>
+                                </tr>
+                                <tr>
+                                    <th>Alternate skill modifiers</th>
+                                    <td>Climb<br>Stealth</td>
+                                </tr>
+                                <tr>
+                                    <th>Alternate Spell-like ability</th>
+                                    <td>Web 1/day</td>
+                                </tr>
+                            </table>
+                            <div class="information-subsubtitle">Bestial features</div>
+                            <table>
+                                <tr>
+                                    <th>Spider Climb</th>
+                                    <td>Webborn possess the ability to walk on walls and ceilings, this functions as a
+                                        permanent version of the spell Spider Climb.</td>
+                                </tr>
+                                <tr>
+                                    <th>Spider Bite</th>
+                                    <td>Webborn have a bite attack that deals 1d6 points of damage.</td>
+                                </tr>
+                                <tr>
+                                    <th>Spider Senses</th>
+                                    <td>Webborn have darkvision up to a range of 60 feet.</td>
+                                </tr>
+                                <tr>
+                                    <th>Spider's Ambush</th>
+                                    <td>Webborn receive a +4 racial bonus on stealth checks.</td>
+                                </tr>
+                            </table>
+                        </div>
+                        <br>
+                        <div class="information-subtitle">Werewasp-kin (Hivebrood)</div>
+                        Found most often found in places where elves make their home, Hivebroods often refer to
+                        Calistria as their patron deity. They are known to be quick to anger and act irrationally.
+                        In their humanoid form they often have two toned hair and a faint humming timbre in their
+                        voices.
+                        <div class="pf-race">
+                            <table>
+                                <tr>
+                                    <th>Ability scores</th>
+                                    <td>+2 Wisdom, -2 Intelligence<br>(+2 Strength while shapechanged)</td>
+                                </tr>
+                                <tr>
+                                    <th>Alternate skill modifiers</th>
+                                    <td>Intimidate<br>Calistria's Teachings: Hivebroods use their character level
+                                        instead of their base attack bonus for the purposes of selecting whip feats
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>Alternate Spell-like ability</th>
+                                    <td>Incessant Buzzing 1/day</td>
+                                </tr>
+                            </table>
+                            <div class="information-subsubtitle">Bestial features</div>
+                            <table>
+                                <tr>
+                                    <th>Flight of the Bumblebee</th>
+                                    <td>Hivebroods have a fly speed of 20 feet with poor mobility.</td>
+                                </tr>
+                                <tr>
+                                    <th>Wasp's Stinger</th>
+                                    <td>Hivebroods have a stink attack that deals 1d6 points of damage.</td>
+                                </tr>
+                                <tr>
+                                    <th>Dark Vision</th>
+                                    <td>Hivebroods have darkvision up to a range of 60 feet.</td>
+                                </tr>
+                                <tr>
+                                    <th>Calistria's Tool</th>
+                                    <td>Hivebroods are proficient with whips.</td>
+                                </tr>
+                            </table>
+                        </div>
+                        <br>
+                        <div class="information-subtitle">Weretortoise-kin (Shelljaw)</div>
+                        Most commonly found in the Soddenlands the Shelljaws are generally peaceful in nature and form
+                        peaceful relationships with others who inhabit the marshes, like Lizardfolk, Scalehearts or
+                        Druids.
+                        <div class="pf-race">
+                            <table>
+                                <tr>
+                                    <th>Ability scores</th>
+                                    <td>+2 Wisdom, -2 Dexterity<br>(+2 Constitution while shapechanged)</td>
+                                </tr>
+                                <tr>
+                                    <th>Alternate skill modifiers</th>
+                                    <td>Diplomacy<br>Survival</td>
+                                </tr>
+                                <tr>
+                                    <th>Alternate Spell-like ability</th>
+                                    <td>Feather Step 1/day</td>
+                                </tr>
+                            </table>
+                            <div class="information-subsubtitle">Bestial features</div>
+                            <table>
+                                <tr>
+                                    <th>Snapping Turtle</th>
+                                    <td>Shelljaws have a bite attack that deals 1d6 points of damage, this attack
+                                        receives 1-½ times the Shelljaw's strength bonus.</td>
+                                </tr>
+                                <tr>
+                                    <th>Hard Shell</th>
+                                    <td>Shelljaws receive +2 natural armor bonus to their AC.</td>
+                                </tr>
+                                <tr>
+                                    <th>Slow and Steady</th>
+                                    <td>The Shelljaw's speed is never modified by armor or encumbrance.</td>
+                                </tr>
+                                <tr>
+                                    <th>Swimming Lessons</th>
+                                    <td>Shelljaws have a swim speed of 20 feet.</td>
+                                </tr>
+                            </table>
+                        </div>
+                        <br>
+                        <div class="information-subtitle">Wereape-kin (Feralfist)</div>
+                        Most commonly found within the Mwangi Expanse the Feralfists usually live a nomadic life style
+                        with their packs. They are rumoured to be descendants of the monkey kings.
+                        <div class="pf-race">
+                            <table>
+                                <tr>
+                                    <th>Ability scores</th>
+                                    <td>+2 Dexterity, -2 Inteligence<br>(+2 Strength while shapechanged)</td>
+                                </tr>
+                                <tr>
+                                    <th>Alternate skill modifiers</th>
+                                    <td>Acrobatics<br>Wild Empathy</td>
+                                </tr>
+                                <tr>
+                                    <th>Alternate Spell-like ability</th>
+                                    <td>Ant Haul 1/day</td>
+                                </tr>
+                            </table>
+                            <div class="information-subsubtitle">Bestial features</div>
+                            <table>
+                                <tr>
+                                    <th>Fists of Sun Wukong</th>
+                                    <td>Feralfists have two slam attacks that each deal 1d4 points of damage.</td>
+                                </tr>
+                                <tr>
+                                    <th>Monkey Climb</th>
+                                    <td>Feralfists have a climb speed of 30 feet.</td>
+                                </tr>
+                                <tr>
+                                    <th>Prehensile Tail</th>
+                                    <td>Feralfists have a long, flexible tail that can be used to carry objects. They
+                                        cannot wield weapons with their tail, but the tail allows them to retrieve a
+                                        small, stowed object carried on their person as a swift action.</td>
+                                </tr>
+                                <tr>
+                                    <th>Primate's Ferocity</th>
+                                    <td>Feralfists can remain conscious and continue fighting even if their hit point
+                                        totals fall below 0. They are still staggered at 0 hit points or lower and lose
+                                        1 hit point each round as normal.</td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="information-subtitle">Favoured class bonus</div>
+                        <div class="pf-race">
+                            <table>
+                                <tr>
+                                    <th>Alchemist</th>
+                                    <td>Add +10 minutes to the duration of the alchemist's mutagens</td>
+                                </tr>
+                                <tr>
+                                    <th>Barbarian</th>
+                                    <td>While you are raging, your racial natural attacks deal +1/4 point of damage.
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>Cleric</th>
+                                    <td>Select one domain power granted at 1st level that is normally usable a number of
+                                        times per day equal to 3 + the cleric's Wisdom modifier. The cleric adds +1/2 to
+                                        the
+                                        number of uses per day of that domain power.</td>
+                                </tr>
+                                <tr>
+                                    <th>Druid</th>
+                                    <td>Add +1/3 to the druid's natural armor bonus when using wild shape.</td>
+                                </tr>
+                                <tr>
+                                    <th>Inquisitor</th>
+                                    <td>Gain 1/4 of a teamwork feat.</td>
+                                </tr>
+                                <tr>
+                                    <th>Monk</th>
+                                    <td>Add +1/4 point to the monk's ki pool.</td>
+                                </tr>
+                                <tr>
+                                    <th>Ranger</th>
+                                    <td>Add a +1/2 bonus on wild empathy checks to influence animals and magical beasts
+                                        that
+                                        are related to your bestial origin. (i.e. werewolf-kin, wolves, winter wolves
+                                        this
+                                        stacks with any wild empathy you may have from your race)</td>
+                                </tr>
+                                <tr>
+                                    <th>Rogue</th>
+                                    <td>The rogue gains +1/6 of a new rogue talent</td>
+                                </tr>
+                                <tr>
+                                    <th>Shifter</th>
+                                    <td>Add 1/5 to the damage dealt when using the shifter claws ability.</td>
+                                </tr>
+                                <tr>
+                                    <th>Slayer</th>
+                                    <td>Increase the studied target bonus on Perception and Survival checks by 1/4. When
+                                        the
+                                        slayer gains the stalker class feature, he also gains this increase to the
+                                        studied
+                                        target bonus on Stealth checks.</td>
+                                </tr>
+                                <tr>
+                                    <th>Sorcerer</th>
+                                    <td>Add 1/2 to the sorcerer's caster level when determining the duration of
+                                        transmutation spells she casts that target the sorcerer.</td>
+                                </tr>
+                                <tr>
+                                    <th>Vigilante</th>
+                                    <td>Gain +1/2 on Bluff checks when attempting to tell a lie that would be true from
+                                        the
+                                        point of view of the vigilante's current identity.</td>
+                                </tr>
+                            </table>
+                        </div>
                     </div>
                 </div>
 
