--- a/games/pathfinder/homebrew.html
+++ b/games/pathfinder/homebrew.html
@@ -107,7 +107,7 @@
                                 </tr>
                             </table>
 
-                            <div class="information-subtitle">Favoured class bonus</div>
+                            <div class="information-subtitle">Favored class bonus</div>
                             <table>
                                 <tr>
                                     <th>Barbarian</th>
@@ -218,7 +218,7 @@
                                         bonus on Stealth and Acrobatics. This replaces Swim and Strong Lungs.</td>
                             </table>
 
-                            <div class="information-subtitle">Favoured class bonus</div>
+                            <div class="information-subtitle">Favored class bonus</div>
                             <table>
                                 <tr>
                                     <th>Ranger</th>
@@ -359,7 +359,7 @@
                                 </tr>
                             </table>
 
-                            <div class="information-subtitle">Favoured class bonus</div>
+                            <div class="information-subtitle">Favored class bonus</div>
                             <table>
                                 <tr>
                                     <th>Witch</th>
@@ -417,7 +417,7 @@
                 <div class="information-item">
                     <div class="information-title">The Skinwalker</div>
                     <div class="information-content">
-                        For the Skinwalker we've added five new subraces and more Favoured class bonusses.<br>
+                        For the Skinwalker we've added five new subraces and more Favored class bonusses.<br>
                         <br>
                         <div class="information-subtitle">Weremantis-kin (Deathclaw)</div>
                         Like their progenitors Deathclaws are often loners, in their humanoid form they have telltale
@@ -630,7 +630,7 @@
                                 </tr>
                             </table>
                         </div>
-                        <div class="information-subtitle">Favoured class bonus</div>
+                        <div class="information-subtitle">Favored class bonus</div>
                         <div class="pf-race">
                             <table>
                                 <tr>
