--- a/games/pathfinder/pathfinder1e.html
+++ b/games/pathfinder/pathfinder1e.html
@@ -50,14 +50,25 @@
                             </li>
                             <li>Unchained skills are available for all classes, with the exception of Intimidate.
                                 The rank requirement remains unchanged.<br>
-                                To compensate for this, unchained rogues receive Skill Focus as a bonus skill when they
-                                would normally gain Rogue's Edge.
+                                To compensate for this, when unchained rogues would normally gain Rogue's Edge, they
+                                instead receive Skill Focus as a bonus feat.
                             </li>
                             <li>
                                 You can open doors as part of a move action.
                             </li>
                             <li>
-                                Paladin and anti-paladin can take any good or any evil respectively.
+                                Paladin and antipaladin can be any good or any evil alignment respectively.
+                            </li>
+                            <li>We use modified favored class bonusses (FCB) for the following classes:
+                                <ul>
+                                    <li><span class="text-bold">Ninja:</span> The ninja can take any FCB for the rogue
+                                        and monk classes. Rogue talents gained from FCB will be ninja talents.</li>
+                                    <li><span class="text-bold">Antipaladin:</span> Antipaladins can choose any FCB for
+                                        the paladin class. Any FCB that affects abilities such as Smite Evil will
+                                        instead apply to the antipaladin's abilities such as Smite Good.</li>
+                                    <li><span class="text-bold">Samurai:</span> The samurai can take any FCB for the
+                                        cavalier class.</li>
+                                </ul>
                             </li>
                         </ol>
                     </div>
