Update homebrew rules

--- a/games/pathfinder/pathfinder1e.html
+++ b/games/pathfinder/pathfinder1e.html
@@ -50,7 +50,7 @@
                             </li>
                             <li>Unchained skills are available for all classes, with the exception of Intimidate.
                                 The rank requirement remains unchanged.<br>
-                                To compensate for this, when unchained rogues would normally gain Rogue's Edge, they
+                                When unchained rogues would normally gain Rogue's Edge, they
                                 instead receive Skill Focus as a bonus feat.
                             </li>
                             <li>
