Change homerule explanation text

--- a/games/pathfinder/pathfinder1e.html
+++ b/games/pathfinder/pathfinder1e.html
@@ -39,9 +39,8 @@
                 <div class="information-item">
                     <div class="information-title">Homerules</div>
                     <div class="information-content">
-                        During our pathfinder games we generally use the homerules. Be aware that a Gamemaster is free
-                        to apply
-                        different rules for their games!<br>
+                        During our pathfinder games we generally use these homerules. Be aware that a Gamemaster is free
+                        to enforce different rules for their games!<br>
                         <ol class="information-list">
                             <li>The following classes are banned:
                                 <ul>
