--- a/games/pathfinder/pathfinder1e.html
+++ b/games/pathfinder/pathfinder1e.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../../css/default.css">
     <link rel="stylesheet" type="text/css" href="../../css/menu.css">
+    <link rel="stylesheet" type="text/css" href="../../css/sidebar.css">
     <link rel="stylesheet" type="text/css" href="../../css/information.css">
     <link rel="stylesheet" type="text/css" href="../../css/pathfinder.css">
 
@@ -236,6 +237,22 @@
                         </div>
                     </div>
                 </div>
+            </div>
+
+            <div class="sidebar">
+                <div class="sidebar-title">Useful pages</div>
+                <ul>
+                    <a href="https://aonprd.com/" target="_blank">
+                        <li><span class="sidebar-subtitle">Archives of Nethys</span><br>
+                            Our primary knowledgebase for PF 1E
+                        </li>
+                    </a>
+                    <a href="https://www.d20pfsrd.com/" target="_blank">
+                        <li><span class="sidebar-subtitle">D20PFSRD</span><br>
+                            An alternative knowledgebase for PF 1E</span>
+                        </li>
+                    </a>
+                </ul>
             </div>
         </div>
 
