Change max-width for sidebar

--- a/games/pathfinder/pathfinder1e.html
+++ b/games/pathfinder/pathfinder1e.html
@@ -252,6 +252,11 @@
                             An alternative knowledgebase for PF 1E</span>
                         </li>
                     </a>
+                    <a href="https://www.d20pfsrd.com/" target="_blank">
+                        <li><span class="sidebar-subtitle">D20PFSRD</span><br>
+                            An alternative knowledgebase for PF 1E</span>
+                        </li>
+                    </a>
                 </ul>
             </div>
         </div>
