--- a/games/pathfinder/pathfinder1e.html
+++ b/games/pathfinder/pathfinder1e.html
@@ -252,9 +252,14 @@
                             An alternative knowledgebase for PF 1E</span>
                         </li>
                     </a>
-                    <a href="https://www.d20pfsrd.com/" target="_blank">
-                        <li><span class="sidebar-subtitle">D20PFSRD</span><br>
-                            An alternative knowledgebase for PF 1E</span>
+                    <a href="http://jody-white.com/pathfinder-ability-score-calculator.php" target="_blank">
+                        <li><span class="sidebar-subtitle">Jody White's Point Buy</span><br>
+                            A point buy calculator we regularly use</span>
+                        </li>
+                    </a>
+                    <a href="https://rolladvantage.com/tokenstamp/" target="_blank">
+                        <li><span class="sidebar-subtitle">Token Stamp</span><br>
+                            Our preferred way of making tokens</span>
                         </li>
                     </a>
                 </ul>
