--- a/games/pathfinder/homebrew.html
+++ b/games/pathfinder/homebrew.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../../css/default.css">
     <link rel="stylesheet" type="text/css" href="../../css/menu.css">
+    <link rel="stylesheet" type="text/css" href="../../css/sidebar.css">
     <link rel="stylesheet" type="text/css" href="../../css/information.css">
     <link rel="stylesheet" type="text/css" href="../../css/pathfinder.css">
 
@@ -700,33 +701,32 @@
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <div class="sidebar">
-                    <div class="sidebar-title">Useful pages</div>
-                    <ul>
-                        <a href="https://aonprd.com/" target="_blank">
-                            <li><span class="sidebar-subtitle">Archives of Nethys</span><br>
-                                Our primary knowledgebase for PF 1E
-                            </li>
-                        </a>
-                        <a href="https://www.d20pfsrd.com/" target="_blank">
-                            <li><span class="sidebar-subtitle">D20PFSRD</span><br>
-                                An alternative knowledgebase for PF 1E</span>
-                            </li>
-                        </a>
-                        <a href="http://jody-white.com/pathfinder-ability-score-calculator.php" target="_blank">
-                            <li><span class="sidebar-subtitle">Jody White's Point Buy</span><br>
-                                A point buy calculator we regularly use</span>
-                            </li>
-                        </a>
-                        <a href="https://rolladvantage.com/tokenstamp/" target="_blank">
-                            <li><span class="sidebar-subtitle">Token Stamp</span><br>
-                                Our preferred way of making tokens</span>
-                            </li>
-                        </a>
-                    </ul>
-                </div>
-
+            <div class="sidebar">
+                <div class="sidebar-title">Useful pages</div>
+                <ul>
+                    <a href="https://aonprd.com/" target="_blank">
+                        <li><span class="sidebar-subtitle">Archives of Nethys</span><br>
+                            Our primary knowledgebase for PF 1E
+                        </li>
+                    </a>
+                    <a href="https://www.d20pfsrd.com/" target="_blank">
+                        <li><span class="sidebar-subtitle">D20PFSRD</span><br>
+                            An alternative knowledgebase for PF 1E</span>
+                        </li>
+                    </a>
+                    <a href="http://jody-white.com/pathfinder-ability-score-calculator.php" target="_blank">
+                        <li><span class="sidebar-subtitle">Jody White's Point Buy</span><br>
+                            A point buy calculator we regularly use</span>
+                        </li>
+                    </a>
+                    <a href="https://rolladvantage.com/tokenstamp/" target="_blank">
+                        <li><span class="sidebar-subtitle">Token Stamp</span><br>
+                            Our preferred way of making tokens</span>
+                        </li>
+                    </a>
+                </ul>
             </div>
         </div>
 
