Add sidebar to WoT Remove redundant clasing tags in sidebar

--- a/games/world-of-tanks.html
+++ b/games/world-of-tanks.html
@@ -45,6 +45,21 @@
                     </a>
                 </div>
             </div>
+
+            <div class="sidebar">
+                <div class="sidebar-title">Useful pages</div>
+                <ul>
+                    <a href="https://tanks.gg/" target="_blank">
+                        <li><span class="sidebar-subtitle">Tanks.GG</span><br>
+                            One of the best analyzing tools for WoT
+                        </li>
+                    </a>
+                    <a href="https://eu.wargaming.net/shop/wot/main/" target="_blank">
+                        <li><span class="sidebar-subtitle">WoT Premium Store</span>
+                        </li>
+                    </a>
+                </ul>
+            </div>
         </div>
 
         <div class="footer">
