Fix typo in WoT

--- a/games/world-of-tanks.html
+++ b/games/world-of-tanks.html
@@ -33,7 +33,7 @@
         <div class="content">
             <div class="information">
                 <div class="information-item">
-                    <div class="information-title">Blueprint calcualation table</div>
+                    <div class="information-title">Blueprint calculation table</div>
                     <div class="information-content">
                         This table is intended to help calculating the amount of blueprints required to reach certain
                         tiers of tanks.
