--- a/index.html
+++ b/index.html
@@ -20,21 +20,26 @@
         </div>
 
         <div class="content">
-            <div class="games">
+            <div class="pages">
                 <ul>
-                    <li class="game">
-                        <a href="games/pathfinder/pathfinder1e.html">
-                            <img src="media/img/gamelogo/pathfinder1e-logo.jpg" alt="Pathfinder 1E">
+                    <li class="page">
+                        <a href="pages/pathfinder/pathfinder1e.html">
+                            <img src="media/img/logos/pathfinder1e-logo.jpg" alt="Pathfinder 1E">
                         </a>
                     </li>
-                    <li class="game">
-                        <a href="games/world-of-tanks.html">
-                            <img src="media/img/gamelogo/worldoftanks-logo.jpg" alt="World of Tanks">
+                    <li class="page">
+                        <a href="pages/world-of-tanks.html">
+                            <img src="media/img/logos/worldoftanks-logo.jpg" alt="World of Tanks">
                         </a>
                     </li>
-                    <li class="game">
-                        <a href="games/minecraft.html">
-                            <img src="media/img/gamelogo/minecraft-logo.jpg" alt="Minecraft">
+                    <li class="page">
+                        <a href="pages/minecraft.html">
+                            <img src="media/img/logos/minecraft-logo.jpg" alt="Minecraft">
+                        </a>
+                    </li>
+                    <li class="page">
+                        <a href="pages/games/games.html">
+                            <img src="media/img/logos/games-logo.jpg" alt="Self-made games">
                         </a>
                     </li>
                 </ul>
