Correct page titles

--- a/pages/games/hangman.html
+++ b/pages/games/hangman.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../../css/default.css">
     <link rel="stylesheet" href="../../css/menu.css">
 
-    <title>Atlit's Almighty Almanac - Self made games: Etch-a-sketch</title>
+    <title>Atlit's Almighty Almanac - Self made games: Hangman</title>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
                     Atlit's Almighty Almanac
                 </div>
                 <div class="header-subtitle">
-                    Self made games: Etch-a-sketch
+                    Self made games: Hangman
                 </div>
             </div>
 
