Part of previous commit

--- a/pages/games/rock-paper-scissors.html
+++ b/pages/games/rock-paper-scissors.html
@@ -65,8 +65,9 @@
                         <li>Player score: <span class="player-score">0</span></li>
                     </ul>
                     <div>Have the computer play against itself for a custom amount of rounds:</div>
-                    <input class="games-amount" value="1"></input> <button class="multiple-games">Start
-                        playing!</button>
+                    <div>Amount of games: <input class="games-amount" value="1"></input></div>
+                    <div>Score to win: <input class="target-score" value="5"></input></div>
+                    <button class="multiple-games">Start playing!</button>
                     <div class="error"></div>
                 </div>
 
