--- a/pages/world-of-tanks.html
+++ b/pages/world-of-tanks.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" type="text/css" href="../css/sidebar.css">
     <link rel="stylesheet" type="text/css" href="../css/information.css">
 
+    <script src="../javascript/blueprint-calculator/data.js" type="module" defer></script>
+    <script src="../javascript/blueprint-calculator/panel.js" type="module" defer></script>
+    <script src="../javascript/blueprint-calculator/logic.js" type="module" defer></script>
+
     <title>Atlit's Almighty Almanac - World of Tanks</title>
 </head>
 
@@ -32,6 +36,14 @@
 
         <div class="content">
             <div class="information">
+                <div class="information-item">
+                    <div class="information-title">Blueprint calculator</div>
+                    <div class="information-content">
+                        An automated blueprint calculator based on the char below.
+                    </div>
+                    <div class="blueprint-calculator">
+                    </div>
+                </div>
                 <div class="information-item">
                     <div class="information-title">Blueprint calculation table</div>
                     <div class="information-content">
