--- a/pages/world-of-tanks.html
+++ b/pages/world-of-tanks.html
@@ -10,9 +10,10 @@
     <link rel="stylesheet" type="text/css" href="../css/sidebar.css">
     <link rel="stylesheet" type="text/css" href="../css/information.css">
 
-    <script src="../javascript/blueprint-calculator/data.js" type="module" defer></script>
+    <script src="../javascript/blueprint-calculator/data.js" type="module"></script>
     <script src="../javascript/blueprint-calculator/panel.js" type="module" defer></script>
     <script src="../javascript/blueprint-calculator/logic.js" type="module" defer></script>
+    <script src="../javascript/blueprint-calculator/validation.js" type="module" defer></script>
 
     <title>Atlit's Almighty Almanac - World of Tanks</title>
 </head>
