--- a/pages/world-of-tanks.html
+++ b/pages/world-of-tanks.html
@@ -40,7 +40,7 @@
                 <div class="information-item">
                     <div class="information-title">Blueprint calculator</div>
                     <div class="information-content">
-                        An automated blueprint calculator based on the char below.
+                        An automated blueprint calculator based on the chart below.
                     </div>
                     <div class="blueprint-calculator">
                     </div>
