--- a/pages/world-of-tanks.html
+++ b/pages/world-of-tanks.html
@@ -10,10 +10,17 @@
     <link rel="stylesheet" type="text/css" href="../css/sidebar.css">
     <link rel="stylesheet" type="text/css" href="../css/information.css">
 
+    <link rel="stylesheet" type="text/css" href="../css/genericPanel.css">
+    <link rel="stylesheet" type="text/css" href="../css/blueprint-calculator/blueprint-calculator.css">
+    <link rel="stylesheet" type="text/css" href="../css/blueprint-calculator/calculatorPanel.css">
+    <link rel="stylesheet" type="text/css" href="../css/blueprint-calculator/resultPanel.css">
+
+    <script src="../javascript/blueprint-calculator/init.js" type="module" defer></script>
     <script src="../javascript/blueprint-calculator/data.js" type="module"></script>
-    <script src="../javascript/blueprint-calculator/panel.js" type="module" defer></script>
-    <script src="../javascript/blueprint-calculator/logic.js" type="module" defer></script>
-    <script src="../javascript/blueprint-calculator/validation.js" type="module" defer></script>
+    <script src="../javascript/blueprint-calculator/calculatorPanel.js" type="module"></script>
+    <script src="../javascript/blueprint-calculator/resultPanel.js" type="module"></script>
+    <script src="../javascript/blueprint-calculator/logic.js" type="module"></script>
+    <script src="../javascript/blueprint-calculator/validation.js" type="module"></script>
 
     <title>Atlit's Almighty Almanac - World of Tanks</title>
 </head>
