Adding basic structure for calculator Renaming calculatorPanel to blueprintCalculatorPanel for clarity

--- a/pages/games/calculator.html
+++ b/pages/games/calculator.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../../css/default.css">
     <link rel="stylesheet" href="../../css/menu.css">
 
-    <title>Atlit's Almighty Almanac - Self made games: Hangman</title>
+    <title>Atlit's Almighty Almanac - Self made games: Calculator</title>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
                     Atlit's Almighty Almanac
                 </div>
                 <div class="header-subtitle">
-                    Self made games: Hangman
+                    Self made games: Calculator
                 </div>
             </div>
 
@@ -41,14 +41,15 @@
                 <a href=tic-tac-toe.html>
                     <div class="menu-item">Tic-Tac-Toe</div>
                 </a>
-                <div class="menu-item current-page">Hangman</div>
-                <a href=calculator.html>
-                    <div class="menu-item">Calculator</div>
+                <a href=hangman.html>
+                    <div class="menu-item">Hangman</div>
                 </a>
+                <div class="menu-item current-page">Calculator</div>
             </div>
 
             <div class="content">
                 Work in progress!
+                <div class="calculator"></div>
             </div>
 
             <div class="footer">
