--- a/pages/games/etch-a-sketch.html
+++ b/pages/games/etch-a-sketch.html
@@ -45,6 +45,9 @@
                 <a href=hangman.html>
                     <div class="menu-item">Hangman</div>
                 </a>
+                <a href=calculator.html>
+                    <div class="menu-item">Calculator</div>
+                </a>
             </div>
 
             <div class="content">
