--- a/pages/games/games.html
+++ b/pages/games/games.html
@@ -43,6 +43,9 @@
                 <a href=hangman.html>
                     <div class="menu-item">Hangman</div>
                 </a>
+                <a href=calculator.html>
+                    <div class="menu-item">Calculator</div>
+                </a>
             </div>
 
             <div class="content">
@@ -66,6 +69,11 @@
                         <li class="page">
                             <a href="./hangman.html">
                                 <img src="../../media/img/logos/hangman-logo.jpg" alt="Hangman">
+                            </a>
+                        </li>
+                        <li class="page">
+                            <a href="./calculator.html">
+                                <img src="../../media/img/logos/calculator-logo.jpg" alt="Calculator">
                             </a>
                         </li>
                     </ul>
