--- a/pages/games/calculator.html
+++ b/pages/games/calculator.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../../css/default.css">
     <link rel="stylesheet" href="../../css/menu.css">
 
+    <script src="../../javascript/calculator/init.js" type="module" defer></script>
+
     <title>Atlit's Almighty Almanac - Self made games: Calculator</title>
 </head>
 
