Add reincarnation base

--- a/pages/pathfinder/homebrew.html
+++ b/pages/pathfinder/homebrew.html
@@ -33,6 +33,9 @@
                 <div class="menu-item">Pathfinder 1E</div>
             </a>
             <div class="menu-item current-page">Homebrew</div>
+            <a href=reincarnation.html>
+                <div class="menu-item">Reincarnation Table</div>
+            </a>
         </div>
 
         <div class="content">
