--- a/pages/pathfinder/pathfinder1e.html
+++ b/pages/pathfinder/pathfinder1e.html
@@ -33,6 +33,9 @@
             <a href=homebrew.html>
                 <div class="menu-item">Homebrew</div>
             </a>
+            <a href=reincarnation.html>
+                <div class="menu-item">Reincarnation Table</div>
+            </a>
         </div>
 
         <div class="content">
