--- a/pages/pathfinder/reincarnation.html
+++ b/pages/pathfinder/reincarnation.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" type="text/css" href="../../css/information.css">
     <link rel="stylesheet" type="text/css" href="../../css/pathfinder.css">
 
+    <script src="../javascript/reincarnation/init.js" type="module" defer></script>
+
     <title>Atlit's Almighty Almanac - Reincarnation Table</title>
 </head>
 
@@ -39,6 +41,8 @@
         </div>
 
         <div class="content">
+            <div class="reincarnation">
+            </div>
         </div>
 
         <div class="footer">
