--- a/pages/pathfinder/reincarnation.html
+++ b/pages/pathfinder/reincarnation.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="../../css/information.css">
     <link rel="stylesheet" type="text/css" href="../../css/pathfinder.css">
 
-    <script src="../javascript/reincarnation/init.js" type="module" defer></script>
+    <script src="../../javascript/reincarnation/init.js" type="module" defer></script>
 
     <title>Atlit's Almighty Almanac - Reincarnation Table</title>
 </head>
